@@ -213,5 +213,11 @@
              name="collective.documentgenerator.PortalTypes" />
     <utility component=".vocabularies.PMDashboardCollectionsVocabularyFactory"
              name="imio.dashboard.collectionsvocabulary" />
-
+    <utility provides="zope.schema.interfaces.IVocabularyFactory"
+             name="collective.iconifiedcategory.categories"
+             factory=".vocabularies.PMCategoryVocabulary" />
+    <utility provides="zope.schema.interfaces.IVocabularyFactory"
+             name="collective.iconifiedcategory.category_titles"
+             factory=".vocabularies.PMCategoryTitleVocabulary" />
+  
 </configure>
