@@ -34,6 +34,15 @@
              &lt;vocabulary&gt;Products.PloneMeeting.vocabularies.othermccorrespondencevocabulary&lt;/vocabulary&gt;
            &lt;/value_type&gt;
          &lt;/field&gt;
+
+         &lt;field name=&quot;only_for_meeting_managers&quot; type=&quot;zope.schema.Bool&quot;&gt; 
+           &lt;description i18n:translate=&quot;&quot;&gt;only_for_meeting_managers_descr&lt;/description&gt;
+           &lt;default&gt;False&lt;/default&gt;
+           &lt;required&gt;False&lt;/required&gt;
+           &lt;title i18n:translate=&quot;&quot;&gt;only_for_meeting_managers&lt;/title&gt;
+           &lt;form:widget type="z3c.form.browser.radio.RadioFieldWidget"&gt;&lt;/form:widget&gt;
+         &lt;/field&gt;
+
        &lt;/schema&gt;
      &lt;/model&gt;
   </property>
